--- a/client/src/assets/css/sign.scss
+++ b/client/src/assets/css/sign.scss
@@ -1,5 +1,5 @@
-@import "@/assets/css/var.scss";
-@import "@/assets/css/global.scss";
+@import "./var.scss";
+@import "./global.scss";
 
 @media screen and (min-width: $sm) {
   .sign {
