--- a/client/src/assets/css/var.scss
+++ b/client/src/assets/css/var.scss
@@ -38,9 +38,9 @@ $header-search-radius: 10px;
 $header-search-height: $header-height - 20px;
 $header-search-max-width: 25vw;
 $header-search-min-width: 200px;
-$header-search-btn-height: ($header-height / 2);
+$header-search-btn-height: calc($header-height / 2);
 $header-search-btn-width: 60px;
-$header-user-width: ($header-height / 1.7);
+$header-user-width: calc($header-height / 1.7);
 $header-user-margin: 1rem;
 $header-user-radius: 50%;
 $header-menu-width: 150px;
